<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    			  xmlns:settings="http://schemas.creatine.com/apk/res/com.creatine.locLogger">

    <PreferenceCategory
        android:title="@string/title_settings">

        <CheckBoxPreference
            android:key="sound_toggle"
            android:title="@string/title_sound"
            android:summaryOn="@string/summary_on_sound"
            android:summaryOff="@string/summary_off_sound"
            android:defaultValue="true" />

        <RingtonePreference
            android:key="notification_sound"
			android:title="@string/title_sound_select"
			android:ringtoneType="notification"
			android:showSilent="false"
			android:defaultValue="content://settings/system/notification_sound" />
        <PreferenceScreen
            android:title="Directory">
            <PreferenceCategory
                android:title="Directory">
                <EditTextPreference
                    android:key="directory"
                    android:title="Directory"
                    android.defaultValue="/sdcard/creatine/"
                    android:dialogTitle="@string/dialog_title_directory" />
                <EditTextPreference
                    android:key="file"
                    android:title="File"
                    android:defaultValue="locationLog.txt"
                    android:dialogTitle="Example: file.txt" />
             </PreferenceCategory>
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>